--- a/manifest.json
+++ b/manifest.json
@@ -6377,6 +6377,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html",
+          "hash": "iAr+iOKXQz3DQwDUKA2czw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.QuestSkullOfGuldan.yml",
       "output": {
         ".html": {
@@ -7101,7 +7113,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Quests.html",
-          "hash": "lglJfOOF3jIbTeNaAXkhiQ=="
+          "hash": "v1sifbmoMG3/ra6S20+9DQ=="
         }
       },
       "is_incremental": false,
@@ -8829,7 +8841,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "O+UjWIXeSfrodTniS3VEHw=="
+          "hash": "OCHVPk+mu7Bhj/dp8u5svw=="
         }
       },
       "is_incremental": false,
@@ -8904,7 +8916,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 734,
+          "total_file_count": 735,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
