--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -27061,6 +27061,77 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.QuestBookOfMedivh.RewardDescription
   nameWithType: QuestBookOfMedivh.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros
+  name: QuestRagnaros
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html
+  commentId: T:WarcraftLegacies.Source.Quests.QuestRagnaros
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros
+  nameWithType: QuestRagnaros
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.#ctor(unit)
+  name: QuestRagnaros(unit)
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros__ctor_unit_
+  commentId: M:WarcraftLegacies.Source.Quests.QuestRagnaros.#ctor(unit)
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.QuestRagnaros(unit)
+  nameWithType: QuestRagnaros.QuestRagnaros(unit)
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.#ctor*
+  name: QuestRagnaros
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.QuestRagnaros.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.QuestRagnaros
+  nameWithType: QuestRagnaros.QuestRagnaros
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.QuestRagnaros.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.CompletionPopup
+  nameWithType: QuestRagnaros.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.QuestRagnaros.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.CompletionPopup
+  nameWithType: QuestRagnaros.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.FailurePopup
+  name: FailurePopup
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_FailurePopup
+  commentId: P:WarcraftLegacies.Source.Quests.QuestRagnaros.FailurePopup
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.FailurePopup
+  nameWithType: QuestRagnaros.FailurePopup
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.FailurePopup*
+  name: FailurePopup
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_FailurePopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.QuestRagnaros.FailurePopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.FailurePopup
+  nameWithType: QuestRagnaros.FailurePopup
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.QuestRagnaros.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestRagnaros.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.QuestRagnaros.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.OnComplete
+  nameWithType: QuestRagnaros.OnComplete
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.QuestRagnaros.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.RewardDescription
+  nameWithType: QuestRagnaros.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.QuestRagnaros.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.QuestRagnaros.html#WarcraftLegacies_Source_Quests_QuestRagnaros_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.QuestRagnaros.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.QuestRagnaros.RewardDescription
+  nameWithType: QuestRagnaros.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.QuestSkullOfGuldan
   name: QuestSkullOfGuldan
   href: api-source/WarcraftLegacies.Source.Quests.QuestSkullOfGuldan.html
